// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PivotTable with single measure pivot sorted by first row attr should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.department",
        },
        "localIdentifier": "a_label.owner.department",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.stage.name.stagename",
        },
        "localIdentifier": "a_label.stage.name.stagename",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.department",
            },
            "localIdentifier": "a_label.owner.department",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.stage.name.stagename",
            },
            "localIdentifier": "a_label.stage.name.stagename",
          },
        },
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
        "a_label.owner.department",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.stage.name.stagename",
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a_label.product.id.name",
        "direction": "desc",
      },
    },
  ],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with single measure pivot sorted by first row attr should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with single measure pivot sorted by second row attr should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.department",
        },
        "localIdentifier": "a_label.owner.department",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.stage.name.stagename",
        },
        "localIdentifier": "a_label.stage.name.stagename",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.department",
            },
            "localIdentifier": "a_label.owner.department",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.stage.name.stagename",
            },
            "localIdentifier": "a_label.stage.name.stagename",
          },
        },
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
        "a_label.owner.department",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.stage.name.stagename",
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [
    Object {
      "attributeSortItem": Object {
        "attributeIdentifier": "a_label.owner.department",
        "direction": "desc",
      },
    },
  ],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with single measure pivot sorted by second row attr should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with single measure should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [],
    },
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with single measure should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with single measure with column attribute should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with single measure with column attribute should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with single measure with row and column attributes should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with single measure with row and column attributes should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with single measure with row attribute should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with single measure with row attribute should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with single measure with two row and one column attributes should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.department",
        },
        "localIdentifier": "a_label.owner.department",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.department",
            },
            "localIdentifier": "a_label.owner.department",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
        "a_label.owner.department",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with single measure with two row and one column attributes should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with single measure with two row and two column attributes should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.department",
        },
        "localIdentifier": "a_label.owner.department",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.stage.name.stagename",
        },
        "localIdentifier": "a_label.stage.name.stagename",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.department",
            },
            "localIdentifier": "a_label.owner.department",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.stage.name.stagename",
            },
            "localIdentifier": "a_label.stage.name.stagename",
          },
        },
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
        "a_label.owner.department",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.stage.name.stagename",
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with single measure with two row and two column attributes should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with two measures should create expected execution definition 1`] = `
Object {
  "attributes": Array [],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [],
    },
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with two measures should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with two measures with column attribute should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with two measures with column attribute should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with two measures with row and column attributes should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with two measures with row and column attributes should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with two measures with row attribute should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with two measures with row attribute should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with two measures with single row attr sorted by first measure should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [
    Object {
      "measureSortItem": Object {
        "direction": "desc",
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m_aangOxLSeztu",
            },
          },
        ],
      },
    },
  ],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with two measures with single row attr sorted by first measure should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with two measures with single row attr sorted by second measure should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [
    Object {
      "measureSortItem": Object {
        "direction": "desc",
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m_acugFHNJgsBy",
            },
          },
        ],
      },
    },
  ],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with two measures with single row attr sorted by second measure should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with two measures with two row and one column attributes should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.department",
        },
        "localIdentifier": "a_label.owner.department",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.department",
            },
            "localIdentifier": "a_label.owner.department",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
        "a_label.owner.department",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with two measures with two row and one column attributes should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;

exports[`PivotTable with two measures with two row and two column attributes should create expected execution definition 1`] = `
Object {
  "attributes": Array [
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.product.id.name",
        },
        "localIdentifier": "a_label.product.id.name",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.department",
        },
        "localIdentifier": "a_label.owner.department",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.stage.name.stagename",
        },
        "localIdentifier": "a_label.stage.name.stagename",
      },
    },
    Object {
      "attribute": Object {
        "displayForm": Object {
          "identifier": "label.owner.region",
        },
        "localIdentifier": "a_label.owner.region",
      },
    },
  ],
  "buckets": Array [
    Object {
      "items": Array [
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "aangOxLSeztu",
                },
              },
            },
            "localIdentifier": "m_aangOxLSeztu",
          },
        },
        Object {
          "measure": Object {
            "definition": Object {
              "measureDefinition": Object {
                "item": Object {
                  "identifier": "acugFHNJgsBy",
                },
              },
            },
            "localIdentifier": "m_acugFHNJgsBy",
          },
        },
      ],
      "localIdentifier": "measures",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.product.id.name",
            },
            "localIdentifier": "a_label.product.id.name",
          },
        },
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.department",
            },
            "localIdentifier": "a_label.owner.department",
          },
        },
      ],
      "localIdentifier": "attribute",
    },
    Object {
      "items": Array [
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.stage.name.stagename",
            },
            "localIdentifier": "a_label.stage.name.stagename",
          },
        },
        Object {
          "attribute": Object {
            "displayForm": Object {
              "identifier": "label.owner.region",
            },
            "localIdentifier": "a_label.owner.region",
          },
        },
      ],
      "localIdentifier": "columns",
    },
  ],
  "dimensions": Array [
    Object {
      "itemIdentifiers": Array [
        "a_label.product.id.name",
        "a_label.owner.department",
      ],
    },
    Object {
      "itemIdentifiers": Array [
        "a_label.stage.name.stagename",
        "a_label.owner.region",
        "measureGroup",
      ],
    },
  ],
  "filters": Array [],
  "measures": Array [
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "aangOxLSeztu",
            },
          },
        },
        "localIdentifier": "m_aangOxLSeztu",
      },
    },
    Object {
      "measure": Object {
        "definition": Object {
          "measureDefinition": Object {
            "item": Object {
              "identifier": "acugFHNJgsBy",
            },
          },
        },
        "localIdentifier": "m_acugFHNJgsBy",
      },
    },
  ],
  "sortBy": Array [],
  "workspace": "testWorkspace",
}
`;

exports[`PivotTable with two measures with two row and two column attributes should create expected props for core chart 1`] = `
Object {
  "ErrorComponent": [Function],
  "LoadingComponent": [Function],
  "afterRender": [Function],
  "config": Object {},
  "drillableItems": Array [],
  "exportTitle": undefined,
  "groupRows": true,
  "locale": "en-US",
  "onDrill": [Function],
  "onExportReady": [Function],
  "onLoadingChanged": [Function],
  "pageSize": 100,
  "pushData": [Function],
}
`;
